force-app/main/default/objects/qual_Config__mdt/qual_Config__mdt.object-meta.xml
<CustomObject>
    <description>Configuration settings for Qualtrics integration</description>
    <label>Qualtrics Config</label>
    <pluralLabel>Qualtrics Configs</pluralLabel>
</CustomObject>