force-app/main/default/objects/qual_Config__mdt/fields/qual_Alert_Email_Addresses__c.field-meta.xml
<CustomField>
    <fullName>qual_Alert_Email_Addresses__c</fullName>
    <description>Comma-separated alert recipients</description>
    <label>Alert Email Addresses</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>