force-app/main/default/objects/qual_Config__mdt/fields/qual_Call_Delay_Minutes__c.field-meta.xml
<CustomField>
    <fullName>qual_Call_Delay_Minutes__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Minutes to delay sending Call/Session events to allow attached UJET call JSON to arrive. Set to 0 for immediate send.</description>
    <label>Call Delay Minutes</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>