force-app/main/default/objects/qual_Config__mdt/fields/qual_Call_Workflow_Id__c.field-meta.xml
<CustomField>
    <fullName>qual_Call_Workflow_Id__c</fullName>
    <description>Qualtrics JSON Event URL token/workflow identifier for UJET Call/Session payloads. Uses the same Named Credential/API token as Case payloads.</description>
    <label>Call Workflow ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>