force-app/main/default/objects/qual_Config__mdt/fields/qual_Case_Custom_Soql_Filter__c.field-meta.xml
<CustomField>
    <fullName>qual_Case_Custom_Soql_Filter__c</fullName>
    <description>Optional custom SOQL WHERE predicate to filter Cases. Example: RecordType.DeveloperName = &apos;Support&apos; AND ContactId != null. Applied as AND condition after standard filters.</description>
    <label>Custom SOQL Filter</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>