force-app/main/default/objects/qual_Config__mdt/fields/qual_Case_Event_Types__c.field-meta.xml
<CustomField>
    <fullName>qual_Case_Event_Types__c</fullName>
    <description>Comma-separated list of enabled case lifecycle event types: Opened, Updated, Closed. Leave blank to default to Closed only (backward compatible).</description>
    <label>Enabled Event Types</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>