force-app/main/default/objects/qual_Config__mdt/fields/qual_Case_Filter_Origins__c.field-meta.xml
<CustomField>
    <fullName>qual_Case_Filter_Origins__c</fullName>
    <description>Comma or newline-separated list of allowed Case Origin values. Leave blank to allow all origins.</description>
    <label>Allowed Origins</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>