force-app/main/default/objects/qual_Config__mdt/fields/qual_Case_Filter_Priorities__c.field-meta.xml
<CustomField>
    <fullName>qual_Case_Filter_Priorities__c</fullName>
    <description>Comma or newline-separated list of allowed Case Priority values. Leave blank to allow all priorities.</description>
    <label>Allowed Priorities</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>