force-app/main/default/objects/qual_Config__mdt/fields/qual_Case_Filter_RecordTypes__c.field-meta.xml
<CustomField>
    <fullName>qual_Case_Filter_RecordTypes__c</fullName>
    <description>Comma or newline-separated list of allowed Case RecordType DeveloperName values. Leave blank to allow all record types.</description>
    <label>Allowed RecordType DevNames</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>