force-app/main/default/objects/qual_Config__mdt/fields/qual_Case_Filter_Statuses__c.field-meta.xml
<CustomField>
    <fullName>qual_Case_Filter_Statuses__c</fullName>
    <description>Comma or newline-separated list of allowed Case Status values. Leave blank to allow all statuses.</description>
    <label>Allowed Statuses</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>