force-app/main/default/objects/qual_Config__mdt/fields/qual_Case_Filter_Types__c.field-meta.xml
<CustomField>
    <fullName>qual_Case_Filter_Types__c</fullName>
    <description>Comma or newline-separated list of allowed Case Type values. Leave blank to allow all types.</description>
    <label>Allowed Types</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>