force-app/main/default/objects/qual_Config__mdt/fields/qual_Case_Opened_Delay_Minutes__c.field-meta.xml
<CustomField>
    <fullName>qual_Case_Opened_Delay_Minutes__c</fullName>
    <defaultValue>120</defaultValue>
    <description>Minutes to delay sending Opened and Updated events to allow data enrichment (e.g., UJET session data). Set to 0 for immediate send. Closed events always send immediately regardless of this setting.</description>
    <label>Opened/Updated Delay Minutes</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>