force-app/main/default/objects/qual_Config__mdt/fields/qual_Case_Require_Contact__c.field-meta.xml
<CustomField>
    <fullName>qual_Case_Require_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When true, only Cases with a ContactId will be sent to Qualtrics</description>
    <label>Require Contact</label>
    <type>Checkbox</type>
</CustomField>