force-app/main/default/objects/qual_Config__mdt/fields/qual_Case_Tracked_Update_Fields__c.field-meta.xml
<CustomField>
    <fullName>qual_Case_Tracked_Update_Fields__c</fullName>
    <description>Comma-separated list of Case field API names that trigger the Updated event when changed on an open case. Example: Status, Priority, OwnerId, ContactId, IsEscalated</description>
    <label>Tracked Update Fields</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>