force-app/main/default/objects/qual_Config__mdt/fields/qual_Case_Workflow_Id__c.field-meta.xml
<CustomField>
    <fullName>qual_Case_Workflow_Id__c</fullName>
    <description>Qualtrics JSON Event URL token/workflow identifier for Case payloads. Falls back to Workflow ID when blank.</description>
    <label>Case Workflow ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>