force-app/main/default/objects/qual_Config__mdt/fields/qual_Datacenter__c.field-meta.xml
<CustomField>
    <fullName>qual_Datacenter__c</fullName>
    <description>Qualtrics datacenter (iad1, gov1, etc.)</description>
    <label>Datacenter</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
</CustomField>