force-app/main/default/objects/qual_Config__mdt/fields/qual_Default_Country_Code__c.field-meta.xml
<CustomField>
    <fullName>qual_Default_Country_Code__c</fullName>
    <defaultValue>&quot;1&quot;</defaultValue>
    <description>Default phone country code</description>
    <label>Default Country Code</label>
    <length>5</length>
    <type>Text</type>
</CustomField>