force-app/main/default/objects/qual_Config__mdt/fields/qual_Environment__c.field-meta.xml
<CustomField>
    <fullName>qual_Environment__c</fullName>
    <description>Environment type</description>
    <label>Environment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DEV</fullName>
                <default>true</default>
                <label>DEV</label>
            </value>
            <value>
                <fullName>UAT</fullName>
            </value>
            <value>
                <fullName>PRODUCTION</fullName>
            </value>
            <value>
                <fullName>GovCloud</fullName>
                <isActive>false</isActive>
                <label>GovCloud</label>
            </value>
            <value>
                <fullName>Sandbox</fullName>
                <isActive>false</isActive>
                <label>Sandbox</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>