force-app/main/default/objects/qual_Config__mdt/fields/qual_Is_Active__c.field-meta.xml
<CustomField>
    <fullName>qual_Is_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enable/disable integration</description>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>