force-app/main/default/objects/qual_Config__mdt/fields/qual_Is_Test_Contact__c.field-meta.xml
<CustomField>
    <fullName>qual_Is_Test_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Marks outbound Case payloads as Qualtrics test contacts through metadata.isTestContact.</description>
    <label>Is Test Contact</label>
    <type>Checkbox</type>
</CustomField>