force-app/main/default/objects/qual_Config__mdt/fields/qual_Log_Level__c.field-meta.xml
<CustomField>
    <fullName>qual_Log_Level__c</fullName>
    <description>Level of integration logging: Debug (Verbose), Info (Normal), Error (Failures only)</description>
    <label>Log Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Info</fullName>
                <default>true</default>
                <label>Info</label>
            </value>
            <value>
                <fullName>Debug</fullName>
            </value>
            <value>
                <fullName>Error</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>