force-app/main/default/objects/qual_Config__mdt/fields/qual_Log_Retention_Days__c.field-meta.xml
<CustomField>
    <fullName>qual_Log_Retention_Days__c</fullName>
    <defaultValue>60</defaultValue>
    <description>Number of days to retain completed Qualtrics integration log records before the scheduled retry processor deletes them.</description>
    <label>Log Retention Days</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>