force-app/main/default/objects/qual_Config__mdt/fields/qual_Max_Payload_Size_KB__c.field-meta.xml
<CustomField>
    <fullName>qual_Max_Payload_Size_KB__c</fullName>
    <defaultValue>100</defaultValue>
    <description>Max payload size in KB</description>
    <label>Max Payload Size KB</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>