force-app/main/default/objects/qual_Config__mdt/fields/qual_Max_Retries__c.field-meta.xml
<CustomField>
    <fullName>qual_Max_Retries__c</fullName>
    <defaultValue>3</defaultValue>
    <description>Maximum retry attempts</description>
    <label>Max Retries</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>