force-app/main/default/objects/qual_Config__mdt/fields/qual_Named_Credential__c.field-meta.xml
<CustomField>
    <fullName>qual_Named_Credential__c</fullName>
    <description>Named Credential API name</description>
    <label>Named Credential</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>