force-app/main/default/objects/qual_Config__mdt/fields/qual_Payload_Version__c.field-meta.xml
<CustomField>
    <fullName>qual_Payload_Version__c</fullName>
    <defaultValue>&quot;1.0&quot;</defaultValue>
    <description>JSON payload version</description>
    <label>Payload Version</label>
    <length>10</length>
    <type>Text</type>
</CustomField>