force-app/main/default/objects/qual_Config__mdt/fields/qual_Retry_Interval_Minutes__c.field-meta.xml
<CustomField>
    <fullName>qual_Retry_Interval_Minutes__c</fullName>
    <defaultValue>15</defaultValue>
    <description>Minutes between retries</description>
    <label>Retry Interval Minutes</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>