force-app/main/default/objects/qual_Config__mdt/fields/qual_Timeout_Seconds__c.field-meta.xml
<CustomField>
    <fullName>qual_Timeout_Seconds__c</fullName>
    <defaultValue>30</defaultValue>
    <description>HTTP timeout in seconds</description>
    <label>Timeout Seconds</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>