force-app/main/default/objects/qual_Config__mdt/fields/qual_Workflow_Id__c.field-meta.xml
<CustomField>
    <fullName>qual_Workflow_Id__c</fullName>
    <description>JSON Event Workflow ID (WF_xxx)</description>
    <label>Workflow Id</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>